# meanas

./: .flake8  .gitignore  MANIFEST.in  README.md  float_raster.py  gridlock  make_docs.sh  nom-eme.py  pyproject.toml  setup.py  spar.py  spar_tests.py  spconv.py
examples/: bloch.py  fdfd.py  fdfd0.py  fdfd1.py  fdtd.py  tcyl.py  test.py
fdfd_tools/: __init__.py  bloch.py  eigensolvers.py  fdtd.py  functional.py  grid.py  operators.py  solvers.py  test_fdtd.py  vectorization.py  waveguide.py  waveguide_mode.py
fdfd_tools/test/: test_fdtd.py
meanas/: VERSION.py  __init__.py  eigensolvers.py  types.py  vectorization.py
meanas/fdfd/: __init__.py  bloch.py  eme.py  farfield.py  functional.py  operators.py  scpml.py  solvers.py  waveguide.py  waveguide_2d.py  waveguide_3d.py  waveguide_cyl.py  waveguide_mode.py
meanas/fdmath/: __init__.py  functional.py  operators.py  types.py  vectorization.py
meanas/fdtd/: __init__.py  base.py  boundaries.py  energy.py  misc.py  pml.py
meanas/test/: __init__.py  conftest.py  test_fdfd.py  test_fdfd_pml.py  test_fdtd.py  utils.py
pdoc_templates/: config.mako  css.mako  html.mako  html_helpers.py  pdf.mako  pdoc.css
