[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meanas"
description = "Electromagnetic simulation tools"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name="Jan Petykiewicz", email="jan@mpxd.net" },
    ]
homepage = "https://mpxd.net/code/jan/meanas"
repository = "https://mpxd.net/code/jan/meanas"
keywords = [
    "electromagnetic",
    "photonics",
    "simulation",
    "FDTD",
    "FDFD",
    "finite",
    "difference",
    "Bloch",
    "EME",
    "mode",
    "solver",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Physics",
    ]
requires-python = ">=3.11"
include = [
    "LICENSE.md"
    ]
dynamic = ["version"]
dependencies = [
    "numpy~=1.26",
    "scipy",
    ]


[tool.hatch.version]
path = "meanas/__init__.py"

[project.optional-dependencies]
dev = ["pytest", "pdoc", "gridlock"]
examples = ["gridlock"]
test = ["pytest"]
